--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,3 +20,15 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 environment=ANSIBLE_STDOUT_CALLBACK="debug",PYTHONUNBUFFERED="1",DEBUG="true",ANSIBLE_FORCE_COLOR="True"
+
+[program:scheduler]
+command=python scheduler.py
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+environment=KEY_FILE="/home/dgoldgar/.ssh/homeassistant",PYTHONUNBUFFERED="1"
+
