--- a/ansible/project/roles/homeassistant/files/pyscript/modules/applications.json
+++ b/ansible/project/roles/homeassistant/files/pyscript/modules/applications.json
@@ -7,8 +7,8 @@
     "notify_version": "true",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/authelia/authelia/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/authelia/authelia/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/authelia/authelia/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -29,8 +29,8 @@
     "notify_version": "false",
     "platform": "docker",
     "git_hub_url": "https://github.com/certbot/certbot/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/certbot/certbot/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/certbot/certbot/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^v[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -63,8 +63,8 @@
     "notify_version": "true",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/dresden-elektronik/deconz-rest-plugin/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/deconzcommunity/deconz/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/deconzcommunity/deconz/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "[0-9].[0-9]{2}.[0-9]+",
     "docker": {
@@ -88,8 +88,8 @@
     "managed": "false",
     "notify_version": "false",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/elasticsearch/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/elasticsearch/tags",
+    "max_version_query_pages": "1",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
       "image": "elasticsearch",
@@ -117,8 +117,8 @@
     "managed": "false",
     "notify_version": "false",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/elastic/filebeat/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/elastic/filebeat/tags",
+    "max_version_query_pages": "1",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "github_version_field": "name",
     "docker": {
@@ -172,8 +172,8 @@
     "notify_version": "true",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/grafana/grafana/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/grafana/grafana-enterprise/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/grafana/grafana-enterprise/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^11.[0-9]{1,2}.[0-9]+$",
     "docker": {
@@ -194,8 +194,8 @@
     "platform": "docker",
     "notify_version": "true",
     "git_hub_url": "https://api.github.com/repos/home-assistant/core/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/homeassistant/home-assistant/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/homeassistant/home-assistant/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^[0-9]{4}.[0-9]{1,2}.[0-9]{1,2}$",
     "docker": {
@@ -236,8 +236,8 @@
     "notify_version": "true",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/influxdata/influxdb/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/influxdb/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/influxdb/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^2.[0-9].[0-9]+$",
     "docker": {
@@ -255,8 +255,8 @@
     "managed": "false",
     "notify_version": "false",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/kibana/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/kibana/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -276,8 +276,8 @@
     "managed": "false",
     "notify_version": "false",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/logstash/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/logstash/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -296,8 +296,8 @@
     "managed": "true",
     "notify_version": "true",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/library/mariadb/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/library/mariadb/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9][0-9].[0-9]{1,2}(.[0-9]{0,2})?$",
     "docker": {
@@ -334,8 +334,8 @@
     "managed": "false",
     "notify_version": "false",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/elastic/metricbeat/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/elastic/metricbeat/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -365,8 +365,8 @@
     "notify_version": "true",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/nginx/nginx/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/nginx/tags?page_size=100",
-    "max_dockerhub_pages": "3",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/nginx/tags?page_size=100",
+    "max_version_query_pages": "3",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9][0-9](.[0-9])?$",
     "docker": {
@@ -410,8 +410,8 @@
       "managed": "true",
       "notify_version": "true",
       "platform": "docker",
-      "docker_hub_url": "https://hub.docker.com/v2/repositories/pihole/pihole/tags",
-      "max_dockerhub_pages": "1",
+      "docker_url": "https://hub.docker.com/v2/repositories/pihole/pihole/tags",
+      "max_version_query_pages": "1",
       "version_pattern": "^[0-9]{4}.[0-9]{1,2}.[0-9]{1,2}$",
       "docker": {
         "image": "pihole/pihole",
@@ -432,8 +432,8 @@
      "managed": "true",
      "notify_version": "true",
      "platform": "docker",
-     "docker_hub_url": "https://hub.docker.com/v2/repositories/library/postgres/tags/",
-     "max_dockerhub_pages": "3",
+     "docker_url": "https://hub.docker.com/v2/repositories/library/postgres/tags/",
+     "max_version_query_pages": "3",
      "version_pattern": "^[0-9]+.[0-9]$",
      "docker": {
        "image": "postgres",
@@ -477,8 +477,8 @@
     "managed": "true",
     "notify_version": "true",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/registry/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/registry/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9].[0-9]+$",
     "docker": {
@@ -501,8 +501,8 @@
      "managed": "true",
      "notify_version": "true",
      "platform": "docker",
-     "docker_hub_url": "https://hub.docker.com/v2/repositories/vabene1111/recipes/tags/",
-     "max_dockerhub_pages": "3",
+     "docker_url": "https://hub.docker.com/v2/repositories/vabene1111/recipes/tags/",
+     "max_version_query_pages": "3",
      "github_version_field": "name",
      "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
      "docker": {
@@ -558,8 +558,8 @@
     "notify_version": "false",
     "git_hub_url": "",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/telegraf/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/telegraf/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "docker": {
       "image": "arm64v8/telegraf",
