--- a/conf/applications.json
+++ b/conf/applications.json
@@ -9,8 +9,8 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/authelia/authelia/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/authelia/authelia/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/authelia/authelia/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -33,8 +33,8 @@
     "notify_version": "False",
     "platform": "docker",
     "git_hub_url": "https://github.com/certbot/certbot/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/certbot/certbot/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/certbot/certbot/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^v[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -69,8 +69,8 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/dresden-elektronik/deconz-rest-plugin/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/deconzcommunity/deconz/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/deconzcommunity/deconz/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "[0-9].[0-9]{2}.[0-9]+",
     "docker": {
@@ -104,8 +104,8 @@
     "managed": "False",
     "notify_version": "False",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/elasticsearch/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/elasticsearch/tags",
+    "max_version_query_pages": "1",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
       "image": "elasticsearch",
@@ -139,8 +139,8 @@
     "managed": "False",
     "notify_version": "False",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/elastic/filebeat/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/elastic/filebeat/tags",
+    "max_version_query_pages": "1",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "github_version_field": "name",
     "docker": {
@@ -217,8 +217,8 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/grafana/grafana/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/grafana/grafana-enterprise/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/grafana/grafana-enterprise/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^11.[0-9]{1,2}.[0-9]+$",
     "docker": {
@@ -241,8 +241,8 @@
     "platform": "docker",
     "notify_version": "True",
     "git_hub_url": "https://api.github.com/repos/home-assistant/core/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/homeassistant/home-assistant/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/homeassistant/home-assistant/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^[0-9]{4}.[0-9]{1,2}.[0-9]{1,2}$",
     "docker": {
@@ -290,8 +290,8 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/influxdata/influxdb/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/influxdb/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/influxdb/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^2.[0-9].[0-9]+$",
     "docker": {
@@ -311,8 +311,8 @@
     "managed": "False",
     "notify_version": "False",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/kibana/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/kibana/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -338,8 +338,8 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "",
-    "docker_hub_url": "https://192.168.50.15:5000/v2/litterbox-v3/tags/list",
-    "max_dockerhub_pages": 1,
+    "docker_url": "https://192.168.50.15:5000/v2/litterbox-v3/tags/list",
+    "max_version_query_pages": 1,
     "github_version_field": "tags",
     "version_pattern": "^[0-9].[0-9]$",
     "docker": {
@@ -389,8 +389,8 @@
     "managed": "False",
     "notify_version": "False",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/logstash/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/logstash/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -414,8 +414,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/library/mariadb/tags?page_size=100",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/library/mariadb/tags?page_size=100",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9][0-9].[0-9]{1,2}(.[0-9]{0,2})?$",
     "docker": {
@@ -439,6 +439,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
+    "docker_url": "https://192.168.50.15:5000/v2/meatometer/tags/list",
+    "max_version_query_pages": "2",
     "version_pattern": "^[0-9]+.[0-9]$",
     "docker": {
       "image": "192.168.50.15:5000/meatometer",
@@ -466,8 +468,8 @@
     "managed": "False",
     "notify_version": "False",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/elastic/metricbeat/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/elastic/metricbeat/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -508,8 +510,8 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/nginx/nginx/releases",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/nginx/tags?page_size=100",
-    "max_dockerhub_pages": "3",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/nginx/tags?page_size=100",
+    "max_version_query_pages": "3",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9][0-9](.[0-9])?$",
     "docker": {
@@ -565,8 +567,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/pihole/pihole/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/pihole/pihole/tags",
+    "max_version_query_pages": "1",
     "version_pattern": "^[0-9]{4}.[0-9]{1,2}.[0-9]{1,2}$",
     "docker": {
       "image": "pihole/pihole",
@@ -594,8 +596,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/library/postgres/tags/",
-    "max_dockerhub_pages": "5",
+    "docker_url": "https://hub.docker.com/v2/repositories/library/postgres/tags/",
+    "max_version_query_pages": "5",
     "version_pattern": "^[0-9]+.[0-9]$",
     "docker": {
       "image": "postgres",
@@ -620,6 +622,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
+    "docker_url": "https://192.168.50.15:5000/v2/radoneye/tags/list",
+    "max_version_query_pages": "2",
     "version_pattern": "^[0-9]+.[0-9]$",
     "docker": {
       "image": "192.168.50.15:5000/radoneye",
@@ -627,18 +631,11 @@
         "-v",
         "/var/run/dbus:/var/run/dbus",
         "-v",
-        "/var/run/udev:/var/run/udev",
-        "--device",
-        "/dev/ttyS0",
-        "--security-opt",
-        "label=disable"
-      ],
-      "container_args": [
-        "-f",
-        "/dev/null"
-      ],
-      "entrypoint": [
-        "/usr/bin/tail"
+        "/opt/LITTERBOX/conf:/app/conf",
+        "-e",
+        "UNIFIED_MAPPING_YAML=/app/conf/unified_mapping.yaml",
+        "-e",
+        "SECRETS_YAML=/app/conf/secrets.yaml"
       ]
     }
   },
@@ -651,8 +648,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/registry/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/registry/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9].[0-9]+$",
     "docker": {
@@ -684,8 +681,8 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/vabene1111/recipes/tags/",
-    "max_dockerhub_pages": "3",
+    "docker_url": "https://hub.docker.com/v2/repositories/vabene1111/recipes/tags/",
+    "max_version_query_pages": "3",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -756,8 +753,8 @@
     "notify_version": "False",
     "git_hub_url": "",
     "platform": "docker",
-    "docker_hub_url": "https://hub.docker.com/v2/repositories/arm64v8/telegraf/tags",
-    "max_dockerhub_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/telegraf/tags",
+    "max_version_query_pages": "1",
     "github_version_field": "name",
     "docker": {
       "image": "arm64v8/telegraf",
