--- a/conf/applications.json
+++ b/conf/applications.json
@@ -9,8 +9,7 @@
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/authelia/authelia/releases",
-    "docker_url": "https://hub.docker.com/v2/repositories/authelia/authelia/tags?page_size=100",
-    "max_version_query_pages": "1",
+    "docker_url": "https://hub.docker.com/v2/repositories/authelia/authelia/tags",
     "github_version_field": "tag_name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -34,7 +33,6 @@
     "platform": "docker",
     "git_hub_url": "https://github.com/certbot/certbot/releases",
     "docker_url": "https://hub.docker.com/v2/repositories/certbot/certbot/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^v[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -70,7 +68,6 @@
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/dresden-elektronik/deconz-rest-plugin/releases",
     "docker_url": "https://hub.docker.com/v2/repositories/deconzcommunity/deconz/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "[0-9].[0-9]{2}.[0-9]+",
     "docker": {
@@ -105,7 +102,6 @@
     "notify_version": "False",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/elasticsearch/tags",
-    "max_version_query_pages": "1",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
       "image": "elasticsearch",
@@ -140,7 +136,6 @@
     "notify_version": "False",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/elastic/filebeat/tags",
-    "max_version_query_pages": "1",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "github_version_field": "name",
     "docker": {
@@ -218,7 +213,6 @@
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/grafana/grafana/releases",
     "docker_url": "https://hub.docker.com/v2/repositories/grafana/grafana-enterprise/tags?page_size=100",
-    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^11.[0-9]{1,2}.[0-9]+$",
     "docker": {
@@ -242,7 +236,6 @@
     "notify_version": "True",
     "git_hub_url": "https://api.github.com/repos/home-assistant/core/releases",
     "docker_url": "https://hub.docker.com/v2/repositories/homeassistant/home-assistant/tags?page_size=100",
-    "max_version_query_pages": "1",
     "github_version_field": "tag_name",
     "version_pattern": "^[0-9]{4}.[0-9]{1,2}.[0-9]{1,2}$",
     "docker": {
@@ -291,7 +284,6 @@
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/influxdata/influxdb/releases",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/influxdb/tags?page_size=100",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^2.[0-9].[0-9]+$",
     "docker": {
@@ -312,7 +304,6 @@
     "notify_version": "False",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/kibana/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -334,12 +325,16 @@
       "ubuntu-one"
     ],
     "live": "True",
+    "logging_config": {
+      "process_toggles": [
+        "ansible","scheduler","web"
+      ]
+    },
     "managed": "False",
     "notify_version": "True",
     "platform": "docker",
     "git_hub_url": "",
     "docker_url": "https://192.168.50.15:5000/v2/litterbox-v3/tags/list",
-    "max_version_query_pages": 1,
     "github_version_field": "tags",
     "version_pattern": "^[0-9].[0-9]$",
     "docker": {
@@ -390,7 +385,6 @@
     "notify_version": "False",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/logstash/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -415,7 +409,6 @@
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/library/mariadb/tags?page_size=100",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9][0-9].[0-9]{1,2}(.[0-9]{0,2})?$",
     "docker": {
@@ -436,11 +429,13 @@
       "ubuntu-one"
     ],
     "live": "True",
+    "logging_config": {
+      "global_toggle": "True"
+    },
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://192.168.50.15:5000/v2/meatometer/tags/list",
-    "max_version_query_pages": "2",
     "version_pattern": "^[0-9]+.[0-9]$",
     "docker": {
       "image": "192.168.50.15:5000/meatometer",
@@ -469,7 +464,6 @@
     "notify_version": "False",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/elastic/metricbeat/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -511,7 +505,6 @@
     "platform": "docker",
     "git_hub_url": "https://api.github.com/repos/nginx/nginx/releases",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/nginx/tags?page_size=100",
-    "max_version_query_pages": "3",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9][0-9](.[0-9])?$",
     "docker": {
@@ -533,9 +526,10 @@
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
+    "docker_url": "https://hub.docker.com/v2/repositories/photoprism/photoprism/tags",
     "git_hub_url": "https://api.github.com/repos/photoprism/photoprism/tags",
     "github_version_field": "name",
-    "version_pattern": "[0-9][0-9][0-9][0-9][0-9][0-9]",
+    "version_pattern": "^[0-9][0-9][0-9][0-9][0-9][0-9]$",
     "docker": {
       "image": "photoprism/photoprism",
       "args": [
@@ -568,7 +562,6 @@
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/pihole/pihole/tags",
-    "max_version_query_pages": "1",
     "version_pattern": "^[0-9]{4}.[0-9]{1,2}.[0-9]{1,2}$",
     "docker": {
       "image": "pihole/pihole",
@@ -597,7 +590,6 @@
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/library/postgres/tags/",
-    "max_version_query_pages": "5",
     "version_pattern": "^[0-9]+.[0-9]$",
     "docker": {
       "image": "postgres",
@@ -616,14 +608,16 @@
   {
     "name": "radoneye",
     "hosts": [
-      "ubuntu-one"
+      "raspberry-pearl"
     ],
     "live": "True",
+    "logging_config": {
+      "global_toggle": "True"
+    },
     "managed": "True",
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://192.168.50.15:5000/v2/radoneye/tags/list",
-    "max_version_query_pages": "2",
     "version_pattern": "^[0-9]+.[0-9]$",
     "docker": {
       "image": "192.168.50.15:5000/radoneye",
@@ -649,7 +643,6 @@
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/registry/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9].[0-9]+$",
     "docker": {
@@ -682,7 +675,6 @@
     "notify_version": "True",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/vabene1111/recipes/tags/",
-    "max_version_query_pages": "3",
     "github_version_field": "name",
     "version_pattern": "^[0-9].[0-9]+.[0-9]+$",
     "docker": {
@@ -724,6 +716,7 @@
     "managed": "False",
     "notify_version": "False",
     "platform": "docker",
+    "docker_url": "https://192.168.50.15:5000/v2/webssh/tags/list",
     "git_hub_url": "https://api.github.com/repos/huashengdun/webssh/tags",
     "github_version_field": "name",
     "version_pattern": "v[0-9].[0-9].[0-9]+",
@@ -754,7 +747,6 @@
     "git_hub_url": "",
     "platform": "docker",
     "docker_url": "https://hub.docker.com/v2/repositories/arm64v8/telegraf/tags",
-    "max_version_query_pages": "1",
     "github_version_field": "name",
     "docker": {
       "image": "arm64v8/telegraf",
