--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,6 +3,15 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
 [program:web]
 command=gunicorn --config gunicorn.conf.py --bind 0.0.0.0:5555 app:app
 autorestart=true
